Improve responsiveness - Fixed a z-index issue causing mobile nav menu to appear behind `a` tags - Fixed contact form scaling, mostly... - Attempted to allow scrolling on courses table, needs more attention - Other minor spacing tweaks

--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -41,7 +41,7 @@
 }
 html, body {
     height: 100%;
-    min-width: 450px;
+    min-width: 350px;
 }
 body {
     background-color: var(--gray-0);
@@ -59,6 +59,7 @@ body, button, input, select {
     position: relative;
     display: flex;
     flex-direction: column;
+    z-index: 1;
 }
 #logo {
     position: absolute;
@@ -98,12 +99,12 @@ main {
     display: flex;
     justify-content: center;
     padding: 3.5rem 1.5rem 4rem;
+    z-index: -1;
 }
 #main-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-width: 400px;
     width: 100%;
 }
 footer {
@@ -122,7 +123,7 @@ footer ul {
 /* General styling */
 a {
     color: var(--indigo);
-    position: relative
+    position: relative;
 }
 a:hover {
     text-decoration: underline;
@@ -152,6 +153,15 @@ h1, .h1 {
 /* Utility Classes */
 .center {
     margin: 0 auto;
+    align-self: center;
+}
+.left {
+    align-self: left;
+}
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .indent {
     text-indent: 2rem;
@@ -195,58 +205,6 @@ svg.info {
     stroke: var(--indigo);
     offset-position: 50px 0;
 }
-h2 {
-    
-}
-
-/* Navburger */
-#nav-expand {
-    display: none;
-}
-#hamburger {
-    float: right;
-    cursor: pointer;
-    display: none;
-    padding: 1rem 0;
-    margin: 0 0.5rem;
-}
-@media (max-width: 650px) {
-    #hamburger {
-        display: block;
-    }
-    nav, nav ul {
-        position: fixed;
-        background-color: var(--gray-20);
-    }
-    nav {
-        height: 5.25rem;
-        width: calc(100% - var(--page-border-size) * 2);
-        box-shadow: 0 calc(var(--page-border-size) * -1) 0 var(--page-border-size) var(--gray-40);
-    }
-    nav ul {
-        top: -12rem;
-        left: var(--page-border-size);
-        width: calc(100% - var(--page-border-size) * 2);
-        text-align: center;
-        z-index: -1;
-        transition: 250ms;
-    }
-    nav ul li, nav ul li a {
-        display: block;
-        padding: 0;
-    }
-    main {
-        margin-top: 3rem;
-    }
-    #nav-expand:checked ~ ul {
-        top: 5.3rem;
-    }
-    .about-pic {
-        float: none;
-        max-width: 100%;
-        margin: 0 auto;
-    }
-}
 
 /* Tooltips */
 
@@ -271,8 +229,13 @@ h2 {
 }
 
 /* Courses table */
+.data-tables {
+    overflow-x: auto;
+}
 table {
+    display: block;
     border-collapse: collapse;
+    overflow-x: auto;
 }
 thead {
     font-weight: bold;
@@ -285,17 +248,78 @@ thead td {
 }
 
 /* Contact form */
+form, input, label:not([role=button]) {
+    width: 100%;
+    max-width: 700px;
+}
 input {
+    margin: 2px 0 1rem 0;
     display: block;
     border: 2px solid var(--gray-80);
     background-color: var(--gray-20);
     color: var(--gray-100);
-    padding: 8px;
+    padding: 8px 10px;
 }
 input[type=textarea] {
-    height: 300px;
+    
 }
 input:focus {
     border-color: var(--violet);
     border: 2px solid var(--violet);
+}
+
+/* Navburger */
+#nav-expand {
+    display: none;
+}
+#hamburger {
+    float: right;
+    cursor: pointer;
+    display: none;
+    padding: 1rem 0;
+    margin: 0 0.5rem;
+}
+@media (max-width: 650px) {
+    nav * {
+        z-index: 10;
+    }
+    #hamburger {
+        display: block;
+    }
+    nav, nav ul {
+        position: fixed;
+        background-color: var(--gray-20);
+    }
+    nav {
+        height: 5.25rem;
+        width: calc(100% - var(--page-border-size) * 2);
+        box-shadow: 0 calc(var(--page-border-size) * -1) 0 var(--page-border-size) var(--gray-40);
+    }
+    nav ul {
+        top: -12rem;
+        left: var(--page-border-size);
+        width: calc(100% - var(--page-border-size) * 2);
+        text-align: center;
+        z-index: 5;
+        transition: 250ms;
+    }
+    nav ul li, nav ul li a {
+        display: block;
+        padding: 0;
+    }
+    main {
+        margin-top: 3rem;
+    }
+    #nav-expand:checked ~ ul {
+        top: 5.3rem;
+    }
+    .about-pic {
+        float: none;
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
+    .projects {
+        width: 100%;
+    }
 }
